--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/teamwelp/reviewsProxy#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
